--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,4 +6,4 @@ base="light"
 primaryColor="#286285"
 secondaryBackgroundColor="#c2ced6"
 textColor="#000000"
-font = "sans-serif"
+font = "sans serif"
