--- a/requirements.txt
+++ b/requirements.txt
@@ -8,25 +8,34 @@ charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
 commonmark==0.9.1
+contourpy==1.0.6
+cycler==0.11.0
 decorator==5.1.1
 entrypoints==0.4
+fonttools==4.38.0
 gitdb==4.0.10
 GitPython==3.1.30
 idna==3.4
 importlib-metadata==5.2.0
 Jinja2==3.1.2
 jsonschema==4.17.3
+kiwisolver==1.4.4
 MarkupSafe==2.1.1
+matplotlib==3.6.2
 numpy==1.24.1
 packaging==22.0
 pandas==1.5.2
 Pillow==9.3.0
+plotly==5.11.0
 protobuf==3.20.3
 pyarrow==10.0.1
+pybadge==0.0.1
+pybadges==3.0.0
 pycodestyle==2.10.0
 pydeck==0.8.0
 Pygments==2.13.0
 Pympler==1.0.1
+pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.7
@@ -37,6 +46,7 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 streamlit==1.16.0
+tenacity==8.1.0
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
